--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-flatpickr",
-  "version": "3.1.0",
+  "version": "3.1.0.EBPI",
   "description": "flatpickr for React",
   "main": "build/index.js",
   "scripts": {
