--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "example": "npm run build && webpack --config example/webpack.js",
     "lint": "eslint lib && eslint example",
-    "build": "./node_modules/.bin/babel lib --out-dir build",
+    "build": "babel lib --out-dir build",
     "prepublish": "npm run build",
     "test": "echo todo"
   },
